OCR is not complete.

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -1,10 +1,16 @@
-# Firebase Configuration
-NEXT_PUBLIC_FIREBASE_API_KEY=your_api_key_here
-NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=your_auth_domain_here
-NEXT_PUBLIC_FIREBASE_PROJECT_ID=your_project_id_here
-NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=your_storage_bucket_here
-NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=your_messaging_sender_id_here
-NEXT_PUBLIC_FIREBASE_APP_ID=your_app_id_here
+# Google Gemini API Configuration
+NEXT_PUBLIC_GEMINI_API_KEY=AIzaSyBXwV9V-IBKqnBMEryEvbKA0OXp43VDr3I
 
-# API Configuration
+# Backend API URL
 NEXT_PUBLIC_API_URL=http://localhost:8080/api
+
+# Application Environment
+NODE_ENV=development
+
+# App Configuration
+NEXT_PUBLIC_APP_NAME=MediLens
+NEXT_PUBLIC_APP_VERSION=1.0.0
+
+# OCR Configuration
+NEXT_PUBLIC_TESSERACT_WORKER_SCRIPT=https://unpkg.com/tesseract.js@6.0.1/dist/worker.min.js
+NEXT_PUBLIC_TESSERACT_LANG_DATA=https://unpkg.com/tesseract.js-core@6.0.1/tesseract-core-lstm.wasm.js
