--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "postcss": "^8.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-pdftotext": "^1.3.4",
     "react-router-dom": "^7.7.0",
     "tailwindcss": "^3.4.0",
     "tesseract.js": "^6.0.1",
