--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "daisyui": "^5.0.46",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
+    "lucide-react": "^0.536.0",
     "next": "^15.4.1",
     "postcss": "^8.4.0",
     "react": "^19.1.0",
