Update .gitignore and environment configuration for frontend

--- a/frontend/.env.local
+++ b/frontend/.env.local
@@ -4,6 +4,7 @@ GEMINI_API_KEY=AIzaSyBXwV9V-IBKqnBMEryEvbKA0OXp43VDr3I
 
 # Backend API Configuration
 NEXT_PUBLIC_API_URL=http://localhost:8080/api
+NEXT_PUBLIC_API_URL_LIVE=https://medilens-backend.onrender.com/api
 
 # Application Environment
 NODE_ENV=development
@@ -15,3 +16,7 @@ NEXT_PUBLIC_APP_VERSION=1.0.0
 # OCR Configuration
 NEXT_PUBLIC_TESSERACT_WORKER_SCRIPT=https://unpkg.com/tesseract.js@6.0.1/dist/worker.min.js
 NEXT_PUBLIC_TESSERACT_LANG_DATA=https://unpkg.com/tesseract.js-core@6.0.1/tesseract-core-lstm.wasm.js
+
+# Frontend URLs
+NEXT_PUBLIC_FRONTEND_URL=http://localhost:3000
+NEXT_PUBLIC_FRONTEND_URL_LIVE=https://medilens-x6zm.onrender.com
