Refactor application.properties to use environment variables for database configuration

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.application.name=Medilens
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/medilens
-spring.datasource.username=postgres
-spring.datasource.password=password
+server.port=${PORT:8080}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
