Enhance error handling in AuthController and UserController to return valid JSON responses

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=${PORT:8080}
-server.port=${PORT:8080}
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/medilens}
 spring.datasource.username=${DB_USERNAME:postgres}
 spring.datasource.password=${DB_PASSWORD:password}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=${JPA_DDL_AUTO:none}
 spring.jpa.properties.hibernate.dialect=${HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+FRONTEND_URL=${FRONTEND_URL:http://localhost:3000}
