--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "autoprefixer": "^10.4.0",
+    "critters": "^0.0.23",
     "daisyui": "^5.0.46",
     "firebase": "^12.0.0",
     "framer-motion": "^12.23.6",
