--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Use an official OpenJDK runtime as a parent image
-FROM eclipse-temurin:17-jdk
+FROM eclipse-temurin:17-jdk-slim
 
 # Set working directory
 WORKDIR /app
@@ -10,8 +10,8 @@ COPY . .
 # Build the application
 RUN ./mvnw clean package -DskipTests
 
-# Expose the port (Render will set $PORT)
+# Expose the port
 EXPOSE 8080
 
-# Run the jar file
-CMD ["java", "-jar", "target/app-0.0.1-SNAPSHOT.jar"]
+# Run the jar file with Render's PORT variable
+CMD ["java", "-Dserver.port=${PORT:8080}", "-jar", "target/app-0.0.1-SNAPSHOT.jar"]
