--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ model/word-model
 Training/
 Testing/
 Validation/
+Notebook/Customized_Chatbot/*.csv
+Notebook/Customized_Chatbot/*.json
+.ipynb_checkpoints/
