--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://medilens.c4j24ia84eun.us-east-1.rds.amazonaws.com:5432/postgres}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://PrescribeCorrect.c4j24ia84eun.us-east-1.rds.amazonaws.com:5432/postgres}
 spring.datasource.username=${DB_USERNAME:marufhasan}
 spring.datasource.password=${DB_PASSWORD:930pvOgVAjm3gCuCEMOb}
 spring.datasource.driver-class-name=org.postgresql.Driver
